--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -422,18 +422,230 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "When discussing time complexity, we should use the proper notation. Most commonly, we use Big-O Notation.\n",
+    "\n",
+    "To denote constant time, we would write O(1), because 1 is a constant (and a simple constant).\n",
+    "\n",
+    "To denote linear time, we would write O(n), because n is the simplest example of linearity.\n",
+    "\n",
+    "Big-O Notation follows a similar pattern for other time complexities. For example, O(n^2), O(2^n), and O(log(n)) are all valid notation. The algorithms with these complexities are probably rather complicated, and we don't need to worry about them at the moment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time complexity is an important consideration when we're analyzing real-world data. An inefficient algorithm will perform very slowly on a large data set.\n",
+    "\n",
+    "Algorithms with lower-order time complexities are more efficient. Constant time algorithms, which we denote with O(1), are more efficient than linear time algorithms, which we denote with O(n). Similarly, an algorithm with complexity O(n^2) is more efficient than one with complexity O(n^3).\n",
+    "\n",
+    "When considering algorithms, we always want to choose the one with the lowest time complexity. It may not always be the easiest one to implement, but the extra effort is usually worth the resulting efficiency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead, imagine guessing 50 first. I tell you the answer is higher. Suddenly, you've removed half of the original possibilities for consideration. You then guess 75, and I tell you the answer is lower. In only two guesses, you've eliminated 3/4 of the possibilities, and you now know that the answer lies between 50 and 75. That's a significant reduction, and your strategy is very efficient.\n",
+    "\n",
+    "This is the strategy a binary search uses. A binary search can help us find an item in a list efficiently if we know the list is ordered. We can check the middle element of the list, compare it to the item we're looking for, and continue narrowing our search in this manner."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So if binary search is more efficient than linear search, why ever bother with linear search at all?\n",
+    "\n",
+    "The answer is that we can only perform a binary search on ordered data. Recall that in our game, the key to our strategy was that we knew exactly how our guess compared to the correct number. We only knew this because there was an order to the \"data.\"\n",
+    "\n",
+    "To order data, we must be able to compare two elements and determine which is greater, or if they're equal. We can compare two strings the same way we compare integers. For instance, \"A\" is less than \"Z\", and \"A\" < \"Z\" would evaluate to True.\n",
+    "\n",
+    "Next, we'll be searching a data set for the names of specific athletes who played in the NBA in 2012. The data set is in alphabetical order by last name, then first name. This a problem, because the data is ordered alphabetically by last name, but the first name is the first thing that appears in each row. As a result, we can't directly compare the names in their current, raw format. Instead, we'll need to format them as last_name, first_name.\n",
+    "\n",
+    "Before moving on, be sure you understand why reformatting the names is important, and why it will allow us to compare names properly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start implementing a binary search on our list of NBA players.\n",
+    "\n",
+    "We'll need to do some division by two to perform binary search. To ensure we get a sensible index, we'll cast the result of this division to an integer using the math.floor() function, which rounds down to the nearest integer.\n",
+    "\n",
+    "We need to do this because if we're splitting an interval with an odd length, we'll get an index that has a fraction. Since a fraction is nonsense in the context of indexing a data set, we'll cast it to an integer. The choice to round down rather than up is arbitrary, but we'll use it for our implementation.\n",
+    "\n",
+    "Because this is a fairly involved algorithm, we'll implement it piece by piece. First, we need to understand what step to take after each guess. We've created the format_name function to save you from tedious string manipulation. We've also loaded the nba data set for you.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nba = pd.read_csv('nba_2013.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A function to extract a player's last name\n",
+    "def format_name(name):\n",
+    "    return name.split(\" \")[1] + \", \" + name.split(\" \")[0]\n",
+    "\n",
+    "# The length of the data set\n",
+    "length = len(nba)\n",
+    "\n",
+    "# Implement the player_age function. For now, just return what the instructions specify\n",
+    "def player_age(name):\n",
+    "    # We need to format our name appropriately for successful comparison\n",
+    "    name = format_name(name)\n",
+    "    # First guess halfway through the list\n",
+    "    first_guess_index = math.floor(length/2)\n",
+    "    first_guess = format_name(nba[first_guess_index][0])\n",
+    "    # Check where we should continue searching\n",
+    "    if name < first_guess:\n",
+    "        return \"earlier\"\n",
+    "    elif name > first_guess:\n",
+    "        return \"later\"\n",
+    "    else:\n",
+    "        return \"found\"\n",
+    "    \n",
+    "# johnson_odom_age = player_age(\"Darius Johnson-Odom\")\n",
+    "# young_age = player_age(\"Nick Young\")\n",
+    "# adrien_age = player_age(\"Jeff Adrien\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A function to extract a player's last name\n",
+    "def format_name(name):\n",
+    "    return name.split(\" \")[1] + \", \" + name.split(\" \")[0]\n",
+    "\n",
+    "# The length of the data set\n",
+    "length = len(nba)\n",
+    "\n",
+    "# Implement the player_age function. For now, just return what the instructions specify\n",
+    "def player_age(name):\n",
+    "    # We need to format our name appropriately for successful comparison\n",
+    "    name = format_name(name)\n",
+    "    # Bounds of the search\n",
+    "    upper_bound = length - 1\n",
+    "    lower_bound = 0\n",
+    "    # Index of first split. It's important to understand how we compute this\n",
+    "    index = math.floor((upper_bound + lower_bound) / 2)\n",
+    "    # First, guess halfway through the list\n",
+    "    guess = format_name(nba[index][0])\n",
+    "    # Keep guessing until it finds the name. Use a while loop here.\n",
+    "        # Check where our guess is in relation to the name we're requesting,\n",
+    "        #     and adjust our bounds as necessary (multiple lines here).\n",
+    "        #     If we have found the name, we wouldn't be in this loop, so\n",
+    "        #     we shouldn't worry about that case\n",
+    "        # Find the new index of our guess\n",
+    "        # Find and format the new guess value\n",
+    "    # When our loop terminates, we have found the right NBA player's name\n",
+    "def player_age(name):\n",
+    "    name = format_name(name)\n",
+    "    #Bounds for Search\n",
+    "    upper_bound = length - 1\n",
+    "    lower_bound = 0\n",
+    "    #index for first split\n",
+    "    index = math.floor((lower_bound + upper_bound)/2)\n",
+    "    #First guess half way through the list\n",
+    "    guess = format_name(nba[index][0])\n",
+    "    #Search until it finds the name\n",
+    "    while name != guess:\n",
+    "        if name < guess:\n",
+    "            upper_bound = index -1\n",
+    "        else:\n",
+    "            lower_bound = index + 1\n",
+    "        index = math.floor((lower_bound + upper_bound)/2)\n",
+    "        guess = format_name(nba[index][0])\n",
+    "    return \"found\"\n",
+    "# carmelo_age = player_age(\"Carmelo Anthony\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We still have to retrieve the player's age if we find him, and return -1 if we don't. We can tell when the function doesn't find a player by adding a small condition to our search.\n",
+    "\n",
+    "We should continue to search until we find the player, or until our list of possible answers is depleted. If we deplete all possible answers, the final step of our search, when upper_bound is equal to lower_bound (and also equal to index), will result in either upper_bound being decremented, or lower_bound being incremented. When this happens, lower_bound will be above upper_bound. We can easily check for this in our loop. It's very important to understand this nuance of our algorithm in order to take advantage of it.\n",
+    "\n",
+    "Because these additions are short, we've also left it up to you to fill in the missing components of our algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A function to extract a player's last name\n",
+    "def format_name(name):\n",
+    "    return name.split(\" \")[1] + \", \" + name.split(\" \")[0]\n",
+    "\n",
+    "# The length of the data set\n",
+    "length = len(nba)\n",
+    "\n",
+    "# Implement the player_age function. For now, just return what the instructions specify\n",
+    "def player_age(name):\n",
+    "    name = format_name(name)\n",
+    "    # Set the initial upper bound of the search\n",
+    "    # Set the initial lower bound of the search\n",
+    "    # Set the index of the first split (remember to use math.floor)\n",
+    "    # First guess at index (remember to format the guess)\n",
+    "    # Run search code until the name is equal to the guess, or upper bound is less than lower bound\n",
+    "        # If name comes before the guess\n",
+    "            # Change the appropriate bound\n",
+    "        # Else (name comes after the guess)\n",
+    "            # Change the appropriate bound\n",
+    "        # Set the index of our next guess (remember to use math.floor)\n",
+    "        # Retrieve and format our next guess\n",
+    "        \n",
+    "    ### Now that our loop has terminated, we must find out why ###\n",
+    "    # If the name is equal to the guess\n",
+    "        # Return the age of the player at index (column index 2 in data set)\n",
+    "    # Else\n",
+    "        # Return -1, because the function didn't find our player\n",
+    "def player_age(name):\n",
+    "    name = format_name(name)\n",
+    "    upper_bound = length -1\n",
+    "    lower_bound = 0\n",
+    "    index = math.floor((upper_bound+ lower_bound)/2)\n",
+    "    guess = format_name(nba[index][0])\n",
+    "    while name != guess and upper_bound >=lower_bound:\n",
+    "        if name < guess:\n",
+    "            upper_bound = index - 1\n",
+    "        else:\n",
+    "            lower_bound = index + 1\n",
+    "        index = math.floor((upper_bound + lower_bound)/2)\n",
+    "        guess = format_name(nba[index][0])\n",
+    "    if name == guess:\n",
+    "        return nba[index][2]\n",
+    "    else:\n",
+    "        return -1\n",
+    "    \n",
+    "# curry_age = player_age(\"Stephen Curry\")\n",
+    "# griffin_age = player_age(\"Blake Griffin\")\n",
+    "# jordan_age = player_age(\"Michael Jordan\")       \n",
+    "            \n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
