Update Recursion and Advanced Data Structures.ipynb

--- a/Recursion and Advanced Data Structures.ipynb
+++ b/Recursion and Advanced Data Structures.ipynb
@@ -129,32 +129,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Fibonacci"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Fibonacci sequence is a famous series of numbers that starts out as follows:\n",
+    "\n",
+    "1, 1, 2, 3, 5, 8, 13, 21, 34, 55, ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each number in the Fibonacci sequence is the sum of the previous two numbers. For instance, 34 in the above sequence is the sum of 13 and 21.\n",
+    "\n",
+    "The only exceptions are the first two numbers. Because the sequence is too short to calculate them, the first two numbers of the sequence are ones by definition. These two numbers are the base cases for the Fibonacci sequence."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add your function below\n",
+    "def fib(n):\n",
+    "    if n == 0 or n ==1:\n",
+    "        return 1\n",
+    "    return fib(n-1) +fib(n-2)\n",
+    "fib1 = fib(1)\n",
+    "fib5 = fib(5)\n",
+    "fib25 = fib(25)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Linked Lists- A Recursive Data Stucture"
+   ]
   },
   {
    "cell_type": "code",
