--- a/Recursion and Advanced Data Structures.ipynb
+++ b/Recursion and Advanced Data Structures.ipynb
@@ -177,11 +177,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src = \"LinkedList.PNG\" />"
+   ]
   },
   {
    "cell_type": "code",
