Update Recursion and Advanced Data Structures.ipynb

--- a/Recursion and Advanced Data Structures.ipynb
+++ b/Recursion and Advanced Data Structures.ipynb
@@ -177,12 +177,140 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"LinkedList.PNG\" />"
+    "<img src=\"LinkedList.PNG\" width=\"800\" />"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linked lists are very similar to arrays, but they differ in how we implement them. A linked list is made up of many nodes, each of which contains a few pieces of information. This information depends on the type of linked list we're using. For this mission, we'll implement a singly linked list.\n",
+    "\n",
+    "In a singly linked list, each node contains its data, as well as the next node. Let's think about how this works. Suppose we want to access the data in the third node. From the first node, we can access its next node, which is the second. From that node, we can access its next node, which is the third node. We now have access to the data we're looking for. Each node is like an element in an array, except that it has some extra information (the next node) in addition to the data itself.\n",
+    "\n",
+    "Linked lists are a recursive data structure. Each node contains the data, and then points to another linked list (the next node). The base case is our empty linked list, which we'll represent with the Python None value.\n",
+    "\n",
+    "Because linked lists are recursive, we can write a lot of interesting algorithms to work with them. While looping through a linked list is awkward, we'll see that recursing on them feels more natural."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We just learned that linked lists are recursive data structures. These structures often allow us to take advantage of recursion to perform operations.\n",
+    "\n",
+    "For example, we can find the length of any linked list by adding 1 to the length of its tail list (the list after the first element). By recursing in this fashion and only stopping when we reach the empty, or None, linked list, we can write a simple function without loops that calculates the length of a linked list.\n",
+    "\n",
+    "We've loaded a linked list called people for you; it contains some names for you to work with. In our implementation, we can access the first node of a linked list with people.head(), and the rest of the linked list with people.tail(). We've also provided a helpful is_empty method for linked lists. people.is_empty() returns a Boolean value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First person's name\n",
+    "# first_item = people.head().get_data()\n",
+    "\n",
+    "# Getting the length of the linked list using iteration\n",
+    "def length_iterative(ls):\n",
+    "    count = 0\n",
+    "    while not ls.is_empty():\n",
+    "        count = count + 1\n",
+    "        ls = ls.tail()\n",
+    "    return count\n",
+    "\n",
+    "# Getting the length of the linked list using recursion\n",
+    "def length_recursive(ls):\n",
+    "    if ls.is_empty():\n",
+    "        return 0\n",
+    "    return 1 + length_recursive(ls.tail())\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "# people_length = length_recursive(people)\n",
+    "\n",
+    "# people.print_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using recursion to return the nth Fibonacci number:\n",
+    "\n",
+    "def fib(n):\n",
+    "    if n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    return fib(n - 1) + fib(n - 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting the length of the linked list using iteration:\n",
+    "\n",
+    "def length_iterative(ls):\n",
+    "    count = 0\n",
+    "    while not ls.is_empty():\n",
+    "        count = count + 1\n",
+    "        ls = ls.tail()\n",
+    "    return count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using recursion to find the length of a linked list:\n",
+    "\n",
+    "def length_recursive(ls):\n",
+    "    if ls.is_empty():\n",
+    "        return 0\n",
+    "    return 1 + length_recursive(ls.tail())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Recursion is the method of repeating code without using loops. An example of recursion would be the factorial function in mathematics.\n",
+    "\n",
+    "We denote a factorial using the ! sign. For example n! denotes multiplying n by all the positive integers less than n. However, 0! is defined as 1.\n",
+    "For example: 5! = 5 * 4 * 3 * 2 * 1.\n",
+    "\n",
+    "A linked list is made up of many nodes. In a singly linked list, each node contains its data as well as the next node.\n",
+    "\n",
+    "A linked list is a type a recursive data structure since each node contains the data and then points to another linked list.\n",
+    "\n",
+    "An advantage of using linked lists is that you need to modify very few nodes when inserting or deleting because the update only requires a constant amount of changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
